# Convioo

./: .dockerignore  .env.example  .gitignore  AUDIT_2026-06-26.md  CLAUDE.md  Dockerfile  NEXT_SESSION_PROMPT.md  README.md  REVIEW.md  ROADMAP.md  entrypoint.sh  pyproject.toml  railway.json  web lead gen
alembic/: env.py
browser-extension/: README.md  manifest.json  options.html  options.js  popup.html  popup.js
docs/: AUDIT_2026-06-10.md  SELF_HOSTED_NOMINATIM.md  operations.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
make-app/: README.md  app.json  connection.json
scripts/: wipe_users.sql
tests/: conftest.py  test_admin_overview.py  test_admin_quality.py  test_affiliate.py  test_ai_fallback.py  test_api_keys.py  test_assistant_memory.py  test_auth_helpers.py  test_auth_recovery.py  test_authz_isolation.py  test_billing_service.py  test_cache.py  test_cities_taxonomy.py  test_csv_mapping_heuristic.py  test_dedup_helpers.py  test_deliverability.py  test_dns_auth.py  test_email_header_sanitize.py  test_email_tracking_pixel.py  test_email_verification.py  test_enabled_sources.py  test_foursquare_collector.py  test_geocode_helpers.py  test_gmail_integration.py  test_google_places_json_guard.py  test_health_endpoint.py  test_hubspot_export.py  test_icp_service.py  test_inbox.py  test_intent_extraction.py  test_knowledge_registry.py  test_language_consistency.py  test_lead_delete.py  test_lead_fingerprint.py  test_lead_segments.py  test_lead_statuses.py  (+35 more)
(+403 files in other folders)
